# CirtucalBuffer

./: .gitignore  CMakeLists.txt  main.cpp
include/: Allocator.h  CirtucalBuffer.h  CirtucalBufferExt.h  Iterator.h
tests/: buffer_test.cpp
